--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
+<form action="#">
+    <h1>Get Started Now</h1>
+
+    <div>
+        <div>
+            <label for="name">Name</label>
+        </div>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required minlength="2" maxlength="50" autocomplete="name">
+    </div>
+
+    <div>
+        <div>
+            <label for="email">Email address</label>
+        </div>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required autocomplete="email">
+    </div>
+
+    <div>
+        <div>
+            <label for="password">Password</label>
+        </div>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required minlength="6" autocomplete="new-password">
+    </div>
+
+    <div class="checkbox-container">
+        <input type="checkbox" id="terms" name="terms" required>
+        <label for="terms">
+            I agree to the <a href="#">terms & policy</a>
+        </label>
+    </div>
+
+    <button type="submit">Signup</button>
+</form>
+
 </body>
 </html>
